--- a/app/views/todo_lists/edit.html.erb
+++ b/app/views/todo_lists/edit.html.erb
@@ -1,10 +1,19 @@
-<h1 class='todo_list_title'>Edit Todo List</h1>
+<div class="page_wrapper">
+  <div class="inner_wrapper">
+    <h1 class='todo_list_title'>Edit Todo List</h1>
 
-<div class="forms">
-  <%= render 'form' %>
-</div>
+    <div class="forms">
+      <%= render 'form' %>
+    </div>
 
-<div class="links">
-  <%= link_to 'Cancel', todo_lists_path %> 
-</div>  
+    <div class="links">
+      <%= link_to 'Cancel', @todo_list %> 
+    </div>  
+  </div>
+</div> 
+<br>    
+<br>    
+<br>    
+
+
 
