--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,23 +1,28 @@
-<div class="row clearfix">
+<div class="row center-align">
   <% if todo_item.completed? %>
     <div class="complete">
-      <%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
+      <%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %>
+        <p><i class="material-icons right">done</i></p>
+      <% end %>  
     </div>
-    <div class="todo_item">
-      <p style="opacity: 0.4;"><strike><%= todo_item.content %></strike></p>
-    </div>
+      <span class="p_tag" style="opacity: 0.4;"><strike><%= todo_item.content %></strike></span>
     <div class="trash">
-      <%= link_to "delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure ?"} %>
+      <%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure ?"} do %>
+        <i class="material-icons right">delete</i>
+      <% end %>  
     </div>
   <% else %>
     <div class="complete">
-      <%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
+      <%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %>
+        <i class="material-icons right">done</i>
+      <% end %>  
     </div>
-    <div class="todo_item">
-      <p><%= todo_item.content %></p>
-    </div>
+      <p class="p_tag"><%= todo_item.content %></p>
     <div class="trash">
-      <%= link_to "delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure ?"} %>
+      <%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure ?"} do %>
+        <i class="material-icons right">delete</i>
+      <% end %>  
     </div>
   <% end %>  
 </div>
+
