--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,10 +1,17 @@
-<% @todo_lists.each do |todo_list| %>
-  <div class="index_row clearfix">
-    <h2 class="todo_list_title"><%= link_to todo_list.title, todo_list %></h2>
-    <p class="todo_list_sub_title"><%= todo_list.description  %></p>
-  </div>
-<% end %>
+<div class="page_wrapper">
+  <div class="inner_wrapper">
+    <% @todo_lists.each do |todo_list| %>
+      <div class="index_row">
+        <h2 class="todo_list_title center-align"><%= link_to todo_list.title, todo_list %></h2>
+        <p class="todo_list_sub_title center-align"><%= todo_list.description  %></p>
+        <div class="border">
+        </div>
+      </div>
+    <% end %>
 
-<div class="links">
-  <%= link_to 'New Todo list', new_todo_list_path %>
+    <div class="links center-align">
+      <%= link_to 'New Todo list', new_todo_list_path %>
+    </div> 
+    <br> 
+  </div>
 </div>  
