--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,9 +1,19 @@
-<h1 class='todo_list_title'>New Todo List</h1>
+<div class="page_wrapper">
+  <div class="inner_wrapper">
+    <h1 class='todo_list_title'>New Todo List</h1>
 
-<div class="forms">
-  <%= render 'form' %>
+    <div class="forms">
+      <%= render 'form' %>
+    </div>
+
+    <div class="links">
+      <%= link_to 'Back', todo_lists_path %> 
+    </div>  
+  </div>
 </div>
-
-<div class="links">
-  <%= link_to 'Back', todo_lists_path %> 
-</div>  
+<br>    
+<br>    
+<br>    
+    
+  
+    
