--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,17 +1,30 @@
-<p id="notice"><%= notice %></p>
+<div class="page_wrapper">
+  <div class="inner_wrapper">
+    <p id="notice"><%= notice %></p>
 
-<h2 class="todo_list_title"><%= @todo_list.title %></h2>
-<p class="todo_list_sub_title"><%= @todo_list.description %></p>
+    <h2 class="todo_list_title center-align"><%= @todo_list.title %></h2>
+    <p class="todo_list_sub_title center-align"><%= @todo_list.description %></p>
+    <div class="border">
+    </div>
 
-<div id="todo_items_wrapper">
-  <%= render @todo_list.todo_items %>
-  <div id="form">
-    <%= render "todo_items/form" %>
+    <div id="todo_items_wrapper">
+      <%= render @todo_list.todo_items %>
+      <div id="form">
+        <%= render "todo_items/form" %>
+      </div>
+    </div>
+    <br>
+    <div class="links">
+      <div class="edit_link"><%= link_to 'Edit', edit_todo_list_path(@todo_list) %></div>   
+      <div class="delete_link"><%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: { confirm: "Are you Sure"} %></div> 
+      <div class="back_link"><%= link_to 'Back', todo_lists_path %></div>
+    </div>
+    <br>
   </div>
 </div>
 
-<div class="links">
-  <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
-  <%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: { confirm: "Are you Sure"} %> |
-  <%= link_to 'Back', todo_lists_path %>
-</div>
+ 
+
+   
+         
+       
